@@ -1,3 +1,7 @@
+Version Next
+
+    - Add support for <ErrorCode> and <ErrorMessage> in <SMSMessage>.
+
 Version 1.0.70 Released March 20, 2014
 
     - Many updates and fixes to Twilio bindings
